test/tests/stages/11_long_integers/valid/extra_credit/switch_long.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: switch_on_long
        List[1]: 
          TIdentifier: l
        CB: 
          List[1]: 
            CS: 
              CSwitch: 
                TIdentifier: (null)
                Bool: 1
                CVar: 
                  TIdentifier: l
                  None: 
                CCompound: 
                  CB: 
                    List[4]: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstInt: 
                              TInt: 0
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 0
                              None: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstInt: 
                              TInt: 100
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 1
                              None: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstLong: 
                              TLong: 8589934592
                            None: 
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 2
                              None: 
                      CS: 
                        CDefault: 
                          TIdentifier: (null)
                          CReturn: 
                            CUnary: 
                              CNegate: 
                              CConstant: 
                                CConstInt: 
                                  TInt: 1
                                None: 
                              None: 
                List[0]: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Long: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CFunctionCall: 
                    TIdentifier: switch_on_long
                    List[1]: 
                      CConstant: 
                        CConstLong: 
                          TLong: 8589934592
                        None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 2
                    None: 
                  None: 
                CReturn: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CFunctionCall: 
                    TIdentifier: switch_on_long
                    List[1]: 
                      CConstant: 
                        CConstInt: 
                          TInt: 100
                        None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                  None: 
                CReturn: 
                  CConstant: 
                    CConstInt: 
                      TInt: 2
                    None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
